Recognizer Programming Code/exercises/exercises/target/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'return'", "'+'", "'-'", "'/'", 
                     "'*'", "'int'", "'float'", "'void'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INTTYPE", 
                      "FLOATTYPE", "VOIDTYPE", "ID", "INTLIT", "FLOATLIT", 
                      "LB", "RB", "LP", "RP", "SEMI", "COMMA", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declarations = 1
    RULE_declarationsList = 2
    RULE_singleDeclarationg = 3
    RULE_variable_declare = 4
    RULE_listOfID = 5
    RULE_theRestIDList = 6
    RULE_function_declare = 7
    RULE_parameters = 8
    RULE_parameter = 9
    RULE_theRestParameterList = 10
    RULE_mptype = 11
    RULE_body = 12
    RULE_command = 13
    RULE_theRestCommand = 14
    RULE_single_command = 15
    RULE_statement = 16
    RULE_listofExp = 17
    RULE_theRestExp = 18
    RULE_expr = 19
    RULE_sub_expr = 20
    RULE_div_mul_expr = 21
    RULE_blacket_expr = 22
    RULE_exp = 23
    RULE_funcall = 24

    ruleNames =  [ "program", "declarations", "declarationsList", "singleDeclarationg", 
                   "variable_declare", "listOfID", "theRestIDList", "function_declare", 
                   "parameters", "parameter", "theRestParameterList", "mptype", 
                   "body", "command", "theRestCommand", "single_command", 
                   "statement", "listofExp", "theRestExp", "expr", "sub_expr", 
                   "div_mul_expr", "blacket_expr", "exp", "funcall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    INTTYPE=7
    FLOATTYPE=8
    VOIDTYPE=9
    ID=10
    INTLIT=11
    FLOATLIT=12
    LB=13
    RB=14
    LP=15
    RP=16
    SEMI=17
    COMMA=18
    WS=19
    ERROR_CHAR=20
    UNCLOSE_STRING=21
    ILLEGAL_ESCAPE=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(BKOOLParser.DeclarationsContext,0)


        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.declarations()
            self.state = 51
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleDeclarationg(self):
            return self.getTypedRuleContext(BKOOLParser.SingleDeclarationgContext,0)


        def declarationsList(self):
            return self.getTypedRuleContext(BKOOLParser.DeclarationsListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_declarations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations" ):
                return visitor.visitDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def declarations(self):

        localctx = BKOOLParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarations)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.singleDeclarationg()
            self.state = 54
            self.declarationsList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleDeclarationg(self):
            return self.getTypedRuleContext(BKOOLParser.SingleDeclarationgContext,0)


        def declarationsList(self):
            return self.getTypedRuleContext(BKOOLParser.DeclarationsListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_declarationsList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationsList" ):
                return visitor.visitDeclarationsList(self)
            else:
                return visitor.visitChildren(self)




    def declarationsList(self):

        localctx = BKOOLParser.DeclarationsListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarationsList)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTTYPE, BKOOLParser.FLOATTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.singleDeclarationg()
                self.state = 57
                self.declarationsList()
                pass
            elif token in [BKOOLParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleDeclarationgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Variable_declareContext,0)


        def function_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Function_declareContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_singleDeclarationg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleDeclarationg" ):
                return visitor.visitSingleDeclarationg(self)
            else:
                return visitor.visitChildren(self)




    def singleDeclarationg(self):

        localctx = BKOOLParser.SingleDeclarationgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_singleDeclarationg)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.variable_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.function_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mptype(self):
            return self.getTypedRuleContext(BKOOLParser.MptypeContext,0)


        def listOfID(self):
            return self.getTypedRuleContext(BKOOLParser.ListOfIDContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_variable_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declare" ):
                return visitor.visitVariable_declare(self)
            else:
                return visitor.visitChildren(self)




    def variable_declare(self):

        localctx = BKOOLParser.Variable_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.mptype()
            self.state = 67
            self.listOfID()
            self.state = 68
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListOfIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def theRestIDList(self):
            return self.getTypedRuleContext(BKOOLParser.TheRestIDListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_listOfID

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListOfID" ):
                return visitor.visitListOfID(self)
            else:
                return visitor.visitChildren(self)




    def listOfID(self):

        localctx = BKOOLParser.ListOfIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listOfID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(BKOOLParser.ID)
            self.state = 71
            self.theRestIDList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TheRestIDListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def theRestIDList(self):
            return self.getTypedRuleContext(BKOOLParser.TheRestIDListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_theRestIDList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTheRestIDList" ):
                return visitor.visitTheRestIDList(self)
            else:
                return visitor.visitChildren(self)




    def theRestIDList(self):

        localctx = BKOOLParser.TheRestIDListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_theRestIDList)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(BKOOLParser.COMMA)
                self.state = 74
                self.match(BKOOLParser.ID)
                self.state = 75
                self.theRestIDList()
                pass
            elif token in [BKOOLParser.RB, BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mptype(self):
            return self.getTypedRuleContext(BKOOLParser.MptypeContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def parameters(self):
            return self.getTypedRuleContext(BKOOLParser.ParametersContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def body(self):
            return self.getTypedRuleContext(BKOOLParser.BodyContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_function_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declare" ):
                return visitor.visitFunction_declare(self)
            else:
                return visitor.visitChildren(self)




    def function_declare(self):

        localctx = BKOOLParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.mptype()
            self.state = 80
            self.match(BKOOLParser.ID)
            self.state = 81
            self.match(BKOOLParser.LB)
            self.state = 82
            self.parameters()
            self.state = 83
            self.match(BKOOLParser.RB)
            self.state = 84
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self):
            return self.getTypedRuleContext(BKOOLParser.ParameterContext,0)


        def theRestParameterList(self):
            return self.getTypedRuleContext(BKOOLParser.TheRestParameterListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = BKOOLParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameters)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTTYPE, BKOOLParser.FLOATTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.parameter()
                self.state = 87
                self.theRestParameterList()
                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mptype(self):
            return self.getTypedRuleContext(BKOOLParser.MptypeContext,0)


        def listOfID(self):
            return self.getTypedRuleContext(BKOOLParser.ListOfIDContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = BKOOLParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.mptype()
            self.state = 93
            self.listOfID()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TheRestParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def parameter(self):
            return self.getTypedRuleContext(BKOOLParser.ParameterContext,0)


        def theRestParameterList(self):
            return self.getTypedRuleContext(BKOOLParser.TheRestParameterListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_theRestParameterList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTheRestParameterList" ):
                return visitor.visitTheRestParameterList(self)
            else:
                return visitor.visitChildren(self)




    def theRestParameterList(self):

        localctx = BKOOLParser.TheRestParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_theRestParameterList)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(BKOOLParser.SEMI)
                self.state = 96
                self.parameter()
                self.state = 97
                self.theRestParameterList()
                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MptypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(BKOOLParser.INTTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(BKOOLParser.FLOATTYPE, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_mptype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMptype" ):
                return visitor.visitMptype(self)
            else:
                return visitor.visitChildren(self)




    def mptype(self):

        localctx = BKOOLParser.MptypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_mptype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not(_la==BKOOLParser.INTTYPE or _la==BKOOLParser.FLOATTYPE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def command(self):
            return self.getTypedRuleContext(BKOOLParser.CommandContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = BKOOLParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(BKOOLParser.LP)
            self.state = 105
            self.command()
            self.state = 106
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def single_command(self):
            return self.getTypedRuleContext(BKOOLParser.Single_commandContext,0)


        def theRestCommand(self):
            return self.getTypedRuleContext(BKOOLParser.TheRestCommandContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = BKOOLParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_command)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.T__1, BKOOLParser.INTTYPE, BKOOLParser.FLOATTYPE, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.single_command()
                self.state = 109
                self.theRestCommand()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TheRestCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def single_command(self):
            return self.getTypedRuleContext(BKOOLParser.Single_commandContext,0)


        def theRestCommand(self):
            return self.getTypedRuleContext(BKOOLParser.TheRestCommandContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_theRestCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTheRestCommand" ):
                return visitor.visitTheRestCommand(self)
            else:
                return visitor.visitChildren(self)




    def theRestCommand(self):

        localctx = BKOOLParser.TheRestCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_theRestCommand)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.T__1, BKOOLParser.INTTYPE, BKOOLParser.FLOATTYPE, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.single_command()
                self.state = 115
                self.theRestCommand()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_commandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declare(self):
            return self.getTypedRuleContext(BKOOLParser.Variable_declareContext,0)


        def statement(self):
            return self.getTypedRuleContext(BKOOLParser.StatementContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_single_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_command" ):
                return visitor.visitSingle_command(self)
            else:
                return visitor.visitChildren(self)




    def single_command(self):

        localctx = BKOOLParser.Single_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_single_command)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTTYPE, BKOOLParser.FLOATTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.variable_declare()
                pass
            elif token in [BKOOLParser.T__1, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def listofExp(self):
            return self.getTypedRuleContext(BKOOLParser.ListofExpContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = BKOOLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_statement)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(BKOOLParser.ID)
                self.state = 125
                self.match(BKOOLParser.T__0)
                self.state = 126
                self.expr()
                self.state = 127
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(BKOOLParser.ID)
                self.state = 130
                self.match(BKOOLParser.LB)
                self.state = 131
                self.listofExp()
                self.state = 132
                self.match(BKOOLParser.RB)
                self.state = 133
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.match(BKOOLParser.T__1)
                self.state = 136
                self.expr()
                self.state = 137
                self.match(BKOOLParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListofExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def theRestExp(self):
            return self.getTypedRuleContext(BKOOLParser.TheRestExpContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_listofExp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListofExp" ):
                return visitor.visitListofExp(self)
            else:
                return visitor.visitChildren(self)




    def listofExp(self):

        localctx = BKOOLParser.ListofExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_listofExp)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.ID, BKOOLParser.INTLIT, BKOOLParser.FLOATLIT, BKOOLParser.LB]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.expr()
                self.state = 142
                self.theRestExp()
                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TheRestExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def theRestExp(self):
            return self.getTypedRuleContext(BKOOLParser.TheRestExpContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_theRestExp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTheRestExp" ):
                return visitor.visitTheRestExp(self)
            else:
                return visitor.visitChildren(self)




    def theRestExp(self):

        localctx = BKOOLParser.TheRestExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_theRestExp)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(BKOOLParser.COMMA)
                self.state = 148
                self.expr()
                self.state = 149
                self.theRestExp()
